changed file name and added some styles

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Intro & Variables</title>
+    <link href="styles.css" rel="stylesheet" />
+    <script src="app.js" type="text/javascript"></script>
 </head>
 <body>
-    start here:
+    <h1>start here:</h1>
+       <p>There is nothing on the index page to see. You must look at the javascript file.</p>
 </body>
 </html>
